--- a/specRunner.html
+++ b/specRunner.html
@@ -16,6 +16,7 @@
 
   <!-- include spec files here... -->
   <script src="spec/accountSpec.js"></script>
+  <script src="spec/featureSpec.js"></script>
 
 </head>
 
