added statement class and tests

--- a/specRunner.html
+++ b/specRunner.html
@@ -13,9 +13,15 @@
 
   <!-- include source files here... -->
   <script src="src/account.js"></script>
+  <script src="src/transaction.js"></script>
+  <script src="src/bankInterface.js"></script>
+  <script src="src/statement.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/accountSpec.js"></script>
+  <script src="spec/transactionSpec.js"></script>
+  <script src="spec/bankInterfaceSpec.js"></script>
+  <script src="spec/statementSpec.js"></script>
   <script src="spec/featureSpec.js"></script>
 
 </head>
